# hyperscope

./: .gitignore  LICENSE  Makefile  README.md  local_files.txt  out.json  pyproject.toml  requirements.txt
apps/: tiff-reader.py
apps/h5ImageViewerPython/: .gitignore  README.md  pyproject.toml  setup.py
apps/h5ImageViewerPython/h5imageviewer/: __init__.py  __main__.py  main.py  utils.py
apps/worm_analysis/: BiologicalEventTracking.py  celery_worker.py  create_patches.py  run_overnight.sh  sort.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
hyperscope/: __init__.py  config.py  data  dataset.py  features.py  plots.py
hyperscope/helpers/: app_helpers.py  concurrency.py  func.py  mp.py
hyperscope/modeling/: predict.py  serve.py  server.pid  train.py
hyperscope/preprocess/: cleanup.py  extract_tifs.py  gen_composite.py  superpixel.py
lightning_logs/version_11/: hparams.yaml
lightning_logs/version_9/: hparams.yaml
models/: .gitignore
models/SAM/: config.py  config.yml  dataset.py  memory_profiling.py  model.py  train.py
models/base/: config.py  dataset.py  loss.py  metrics.py  test_dataset.py
scripts/: calc_stats.py  celery.py  findlibs.sh  generic_tracking.py  hdf5_images_extract.py  image_match.csv  image_match.py  json_to_mask.py  kernel_startup.py  metavision_generic_tracking.py  metavision_generic_tracking.py~  metavision_sparse_optical_flow.py  metavision_sparse_optical_flow.py.bak  np_to_h5.py  np_to_h52.py  optical_flow.sh  requriements.txt  setup_kernel.sh  snr_avg.py  test_pyanim.py  tiff_to_h5.py  tracking.sh  verify_masks.py
(+51 files in other folders)
