[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hyperscope"
version = "0.0.1"
description = "Code base for the CZI hyper spectral/temporal scope"
authors = [
  { name = "Rich Baird" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "numba>=0.61.2",
    "omegaconf>=2.3.0",
    "transformers>=4.53.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pyenv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["hypserscope"]
force_sort_within_sections = true

