[project]
name = "h5imageviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.13.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyside6>=6.9.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
